--- a/Assets/sass/style.scss
+++ b/Assets/sass/style.scss
@@ -179,14 +179,14 @@ body {
 		}
 		.github-link{
 			&:hover{
-				background-color: #fff;
+				background-color: #ccc;
 				color: #000;
 				border: 1px solid #000;
 			}
 		}
 		.linkedin-link{
 			&:hover{
-				background-color: #fff;
+				background-color: #ccc;
 				color: #0e76a8;
 				border: 1px solid #0e76a8;
 			}
@@ -196,6 +196,20 @@ body {
 				background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 				color: #fff;
 				border: 1px solid #000;
+			}
+		}
+		.discord-link{
+			&:hover{
+				background: #1e2124;
+				color: #7289DA;
+				border: 1px solid #1e2124;
+			}
+		}
+		.at-link{
+			&:hover{
+				background: linear-gradient(100deg, rgba(62,101,207,1) 0%, rgba(199,22,16,1) 25%, rgba(242,166,12,1) 50%, rgba(59,96,196,1) 75%, rgba(8,133,27,1) 100%);
+				color: #fff;
+				border: 1px solid #1e2124;
 			}
 		}
 	}
