--- a/pages/Assets/css/style.css
+++ b/pages/Assets/css/style.css
@@ -172,11 +172,9 @@
 #transition {
   width: 100%;
   height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 #transition .card {
+  margin: 0px auto;
   height: 400px;
   width: 500px;
   background-image: url("../img/Planet.png");
